Archive2/d1/ef1057841fdb34/output
main.cpp: In instantiation of 'int check(std::array<unsigned char, N>) [with long unsigned int N = 3ul]':
main.cpp:13:41:   required from here
main.cpp:7:5: error: static assertion failed: invalid value
     static_assert(N==20 || N==30, "invalid value");
     ^
